--- a/WSUI.Control/WSSidebarControl.xaml
+++ b/WSUI.Control/WSSidebarControl.xaml
@@ -52,9 +52,10 @@
 
                 <ContentControl Grid.Row="1" Margin="4" regions:RegionManager.RegionName="SidebarSearchRegion" />
                 <ContentControl Grid.Row="2" Margin="4 4 0 4" HorizontalAlignment="Stretch" regions:RegionManager.RegionName="SidebarStrategyRegion" />
-                <ContentControl Grid.Row="3" Margin="0 4 0 4" regions:RegionManager.RegionName="SidebarDataRegion" />
-                <ContentControl Grid.Row="3" Margin="0 4 4 4" regions:RegionManager.RegionName="SidebarPreviewRegion" Visibility="Collapsed"/>
-
+                <Grid Grid.Row="3">
+                    <ContentControl Margin="0 4 0 4" regions:RegionManager.RegionName="SidebarDataRegion" Visibility="{Binding DataVisibility,UpdateSourceTrigger=PropertyChanged}"/>
+                    <ContentControl Margin="0 4 4 4" regions:RegionManager.RegionName="SidebarPreviewRegion" Visibility="{Binding PreviewVisibility,UpdateSourceTrigger=PropertyChanged}"/>
+                </Grid>
             </Grid>
         </Border>
     </Grid>
