--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -19,7 +19,7 @@
     <Style x:Key="ImageStyle" TargetType="{x:Type Image}">
         <Setter Property="Width" Value="16" />
         <Setter Property="Height" Value="16" />
-        <Setter Property="Margin" Value="5" />
+        <Setter Property="Margin" Value="2" />
     </Style>
 
     <Style x:Key="ImageStyleEmail" TargetType="{x:Type Image}" BasedOn="{StaticResource ImageStyle}">
@@ -59,6 +59,7 @@
 
     <Style x:Key="ExpanderUpHeaderStyle" TargetType="{x:Type ToggleButton}">
         <Setter Property="Visibility" Value="Visible"></Setter>
+        <Setter Property="VerticalAlignment" Value="Top"></Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
@@ -131,7 +132,7 @@
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
                                 <ToggleButton Style="{StaticResource ExpanderUpHeaderStyle}" x:Name="HeaderSite" Grid.Column="0" Margin="0" Padding="{TemplateBinding Padding}" FontFamily="{TemplateBinding FontFamily}" FontSize="{TemplateBinding FontSize}" FontStretch="{TemplateBinding FontStretch}" FontStyle="{TemplateBinding FontStyle}" FontWeight="{TemplateBinding FontWeight}" Foreground="{TemplateBinding Foreground}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" MinHeight="0" MinWidth="0" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" />
-                                <!--<Grid Grid.Column="1" HorizontalAlignment="Stretch">
+                                <Grid Grid.Column="1" HorizontalAlignment="Stretch">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto" />
                                         <ColumnDefinition Style="{StaticResource ResourceKey=CountStyleWidthColumn}" />
@@ -139,19 +140,25 @@
                                         <ColumnDefinition Width="0.75*" />
                                         <ColumnDefinition Width="Auto" />
                                     </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"></RowDefinition>
+                                        <RowDefinition Height="Auto"></RowDefinition>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ToolTip>
+                                        <StackPanel Orientation="Vertical">
+                                            <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                                        </StackPanel>
+                                    </Grid.ToolTip>
 
-                                    <Image Style="{StaticResource ImageStyleEmail}" Grid.Column="0" />
+                                    <Image Style="{StaticResource ImageStyleEmail}" Grid.Column="0" Grid.Row="0" />
 
-                                    <TextBlock Grid.Column="1" Margin="0 3 0 3" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
+                                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="0 2 0 1" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
+                                    <ctrl:HightliteTextBlock Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="0" Margin="2 2 2 1" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=Recepient}"></ctrl:HightliteTextBlock>
+                                    <TextBlock Grid.Column="4" Grid.Row="0" Margin="1 2 1 1" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
 
-                                    <ctrl:HightliteTextBlock Grid.Column="2" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=Recepient}"></ctrl:HightliteTextBlock>
-
-                                    <ctrl:HightliteTextBlock Grid.Column="3" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"></ctrl:HightliteTextBlock>
-
-                                    <TextBlock Grid.Column="4" Margin="5" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
-                                </Grid>-->
-        <ContentControl Grid.Column="1"   ContentTemplate="{TemplateBinding HeaderTemplate}" ContentTemplateSelector="{TemplateBinding HeaderTemplateSelector}" ></ContentControl>
-        </Grid>
+                                    <ctrl:HightliteTextBlock Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="1" Margin="0 1 0 2" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"></ctrl:HightliteTextBlock>
+                                </Grid>
+                            </Grid>
         <ContentPresenter x:Name="ExpandSite" DockPanel.Dock="Bottom" Margin="0" Focusable="false" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Visibility="Collapsed" />
         </DockPanel>
         </Border>
@@ -190,20 +197,23 @@
                 <ColumnDefinition Width="0.75*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
             <Grid.ToolTip>
                 <StackPanel Orientation="Vertical">
                     <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
                 </StackPanel>
             </Grid.ToolTip>
 
-            <Image Style="{StaticResource ImageStyleEmail}" Grid.Column="0" />
+            <Image Style="{StaticResource ImageStyleEmail}" Grid.Column="0" Grid.Row="0" />
 
-            <TextBlock Grid.Column="1" Margin="0 3 0 3" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
-            <ctrl:HightliteTextBlock Grid.Column="2" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=Recepient}"></ctrl:HightliteTextBlock>
+            <TextBlock Grid.Column="1" Grid.Row="0" Margin="0 2 0 2" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
+            <ctrl:HightliteTextBlock Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="0" Margin="2" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=Recepient}"></ctrl:HightliteTextBlock>
+            <TextBlock Grid.Column="4" Grid.Row="0" Margin="2 2 1 2" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
 
-            <ctrl:HightliteTextBlock Grid.Column="3" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"></ctrl:HightliteTextBlock>
-
-            <TextBlock Grid.Column="4" Margin="5 5 1 5" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
+            <ctrl:HightliteTextBlock Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="1" Margin="0 1 0 2" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"></ctrl:HightliteTextBlock>
             <i:Interaction.Behaviors>
                 <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
             </i:Interaction.Behaviors>
@@ -220,7 +230,7 @@
                     <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
                 </StackPanel>
             </Grid.ToolTip>
-            <Expander Style="{StaticResource EmailExpanderStyle}" HeaderTemplateSelector="" Grid.Column="0" Margin="0" ExpandDirection="Down">
+            <Expander Style="{StaticResource EmailExpanderStyle}" Grid.Column="0" Margin="0" ExpandDirection="Down">
                 <Grid>
                     <ListBox ItemsSource="{Binding Items}" ItemTemplate="{StaticResource EmailItemTemplate}" Style="{StaticResource ListBoxExpanderStyle}">
 
@@ -463,16 +473,16 @@
                         <ContentPresenter x:Name="ExpandSite" DockPanel.Dock="Bottom" Margin="{TemplateBinding Padding}" Focusable="false" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Visibility="Collapsed" />
                     </DockPanel>
                     <!--ContentTemplate="{TemplateBinding HeaderTemplate}" ContentTemplateSelector="{TemplateBinding HeaderTemplateSelector}"-->
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsExpanded" Value="true">
-                            <Setter Property="Visibility" TargetName="ExpandSite" Value="Visible" />
-                        </Trigger>
-                        <Trigger Property="IsEnabled" Value="false">
-                            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsExpanded" Value="true">
+                <Setter Property="Visibility" TargetName="ExpandSite" Value="Visible" />
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="false">
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
+            </Trigger>
+        </ControlTemplate.Triggers>
+        </ControlTemplate>
+        </Setter.Value>
         </Setter>
     </Style>
 
