--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -554,13 +554,19 @@
                             <Setter Property="Foreground" Value="{StaticResource AccentSelectedColorBrush}" />
                             <Setter TargetName="IconPath" Property="Fill" Value="White"></Setter>
                         </Trigger>
-                        <Trigger Property="IsMouseOver" Value="True">
+                        
+                        <MultiTrigger >
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsMouseOver" Value="True"></Condition>
+                                <Condition Property="IsSelected" Value="False"></Condition>
+                            </MultiTrigger.Conditions>
                             <Setter Property="Background" TargetName="Bd">
                                 <Setter.Value>
                                     <SolidColorBrush Color="{StaticResource HighLightColorItem}" />
                                 </Setter.Value>
                             </Setter>
-                        </Trigger>
+                        </MultiTrigger>
+                        
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Foreground" Value="{StaticResource GrayBrush5}" />
                         </Trigger>
